updates for build
changed scripts to be simpler

--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "version": "4.8.0",
   "private": true,
   "scripts": {
-    "start": "react-scripts start",
-    "build": "cross-env GENERATE_SOURCEMAP=false react-scripts build",
+    "start": "serve -s build",
+    "build": "react-scripts build",
+    "postinstall": "npm run build",
     "prettier:fix": "prettier './src/**/*.js' --write",
     "eslint:fix": "eslint ./src --fix",
     "codeStyle:fix": "npm run prettier:fix && npm run eslint:fix",
